# rade-package-manager

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  temp  test  test.rs
src/: download_install.rs  gitl.rs  info.rs  install.rs  list.rs  log.rs  logparser.rs  main.rs  remove.rs  search.rs
