[package]
name = "rade"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
git2="0.19.0"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"
zip = "0.6"
indicatif = "0.17.8"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
